--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,11 +21,10 @@ jobs:
           override: true
 
       - name: Install packages (Linux)
-        if: runner.os == 'Linux' && false # TODO: enable if eframe is part of the project, otherwise remove
         uses: awalsh128/cache-apt-pkgs-action@v1.3.0
         with:
-          # some deps used by eframe, if that is part of the project
-          packages: libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libxkbcommon-dev libssl-dev # libgtk-3-dev is used by rfd
+          # Random stuff required by `bevy`
+          packages: libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libxkbcommon-dev libssl-dev libalsa
           version: 1.0
           execute_install_scripts: true
 
