--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,11 @@ itertools = "0.13"
 ron = "0.8"
 
 
-[dev-dependencies]
+# `dynamic_linking` on windows hits error for maximum number of exported symbols on linking.
+[target.'cfg(not(windows))'.dev-dependencies]
 bevy = { version = "0.15", features = ["dynamic_linking"] }
 # bevy = { path = "../../bevyengine/bevy/", features = ["dynamic_linking"] }
+
+[dev-dependencies]
+rand = "0.8"
+rand_chacha = "0.3"
