fix clippy issues

--- a/Cranky.toml
+++ b/Cranky.toml
@@ -82,7 +82,6 @@ warn = [
   "clippy::match_wild_err_arm",
   "clippy::match_wildcard_for_single_variants",
   "clippy::mem_forget",
-  "clippy::mismatched_target_os",
   "clippy::mismatching_type_param_order",
   "clippy::missing_assert_message",
   "clippy::missing_enforced_import_renames",
@@ -158,6 +157,7 @@ warn = [
   "unused_import_braces",
   "unused_lifetimes",
   "unused_qualifications",
+  "unused_variables",
 ]
 
 allow = [
