--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 
 [dependencies]
-rerun = { version = "0.20", default-features = false, features = [
+rerun = { path = "/home/cmc/dev/rerun-io/rerun/crates/top/rerun", default-features = false, features = [
     "sdk",
     "image",
     "glam",
